--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600&family=Bebas+Neue&family=Bigelow+Rules&family=Grape+Nuts&family=Poppins&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&family=Bebas+Neue&family=Bigelow+Rules&family=Grape+Nuts&family=Open+Sans:wght@500&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +11,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  font-family: Assistant;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #1a223e;
+  margin: 0;
 }
